--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -10,7 +10,7 @@
 button {
     font-size: 18px;
     background-color: #FF5A5F;
-    color: #FFFFFF;
+    color: #ffffff;
     height: 48px;
     width: 20%;
     border-radius: 4px;
