--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -24,7 +24,7 @@
   margin-bottom: 20px;
 }
 
-/* Price by night circle */
+
 .places .price_by_night {
   align-items: center;
   border: 4px solid #ff5a5f;
@@ -62,6 +62,34 @@
 }
 
 
+.places .amenities,
+.places .reviews {
+  margin-top: 40px;
+}
+
+
+.places .amenities li {
+  display: flex;
+  flex-direction: row;
+}
+
+
+.places .amenities i {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-right: 10px;
+  width: 5%;
+}
+
+
+.places .amenities p {
+  margin-top: 20px;
+}
+
+
 .places h1 {
   font-size: 30px;
   font-weight: bold;
@@ -78,6 +106,24 @@
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+
+.places .amenities h2,
+.places .reviews h2 {
+  border-bottom: 1px solid #ddd;
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 10px;
+  text-align: left;
+}
+
+
+.places .reviews h3 {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 6px;
+  margin-top: 20px;
 }
 
 footer {
