--- a/web_static/styles/102-common.css
+++ b/web_static/styles/102-common.css
@@ -3,13 +3,19 @@ body {
   font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* Container style */
+
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+
 .container {
   margin: 30px auto;
   max-width: 1000px;
 }
 
-/* Strong style */
+
 strong {
   font-weight: bold;
 }
