--- a/web_static/styles/102-places.css
+++ b/web_static/styles/102-places.css
@@ -6,7 +6,6 @@
   width: 100%;
 }
 
-
 .places article {
   border: 1px solid #ff5a5f;
   border-radius: 4px;
@@ -24,7 +23,6 @@
   margin-bottom: 20px;
 }
 
-/* Price by night circle */
 .places .price_by_night {
   align-items: center;
   border: 4px solid #ff5a5f;
@@ -49,16 +47,38 @@
   text-align: center;
 }
 
-
 .places .max_guest,
 .places .number_rooms,
 .places .number_bathrooms{
   width: 100px;
 }
 
-
 .places .user {
   margin: 20px auto 20px auto;
+}
+
+.places .amenities,
+.places .reviews {
+  margin-top: 40px;
+}
+
+.places .amenities li {
+  display: flex;
+  flex-direction: row;
+}
+
+.places .amenities i {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-right: 10px;
+  width: 5%;
+}
+
+.places .amenities p {
+  margin-top: 20px;
 }
 
 
@@ -69,6 +89,11 @@
   width: 100%;
 }
 
+@media only screen and (max-width: 1000px) {
+  .places h1 {
+    width: 95%;
+  }
+}
 
 .places h2 {
   font-size: 30px;
@@ -80,6 +105,18 @@
           box-sizing: border-box;
 }
 
-footer {
-  position: relative;
+.places .amenities h2,
+.places .reviews h2 {
+  border-bottom: 1px solid #ddd;
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 10px;
+  text-align: left;
+}
+
+.places .reviews h3 {
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 6px;
+  margin-top: 20px;
 }
