--- a/web_static/styles/103-common.css
+++ b/web_static/styles/103-common.css
@@ -1,15 +1,21 @@
+
 body {
   color: #484848;
   font: 14px Circular, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-/* Container style */
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+
 .container {
   margin: 30px auto;
   max-width: 1000px;
 }
 
-/* Strong style */
+
 strong {
   font-weight: bold;
 }
