--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,13 +1,10 @@
 footer {
-    height: 60px;
-    background-color: #00FF00;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-}
-
-p {
-    text-align: center;
-    padding: 6px;
+  align-items: center;
+  background-color: #0f0;
+  bottom: 0;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
 }
