--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,28 +1,26 @@
-.places {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
+.places article {
+  border: 1px solid #ff5a5f;
+  border-radius: 4px;
+  display: inline-block;
+  margin: 20px;
+  padding: 20px;
+  width: 390px;
 }
+
 
 .places h1 {
-    text-align: left;
-    font-size: 30px;
-    display: block;
-    flex-grow: 2;
-    width: 100%;
-    margin-left: 1em;
+  font-size: 30px;
+  font-weight: bold;
+  margin: .67em 0 .67em 0;
+  width: 100%;
 }
 
-.places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-}
 
-.places article h2 {
-    font-size: 30px;
-    text-align: center;
-    margin-top: 0.175em;
+.places h2 {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
 }
